--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,7 @@ trigger:
 
 variables:
   buildConfiguration: 'Release'
+  Connexion: 'Gestionnaire de ressources GAME Tailspin'
 
 stages:
 - stage: 'Build'
